discussion/kv_engine/158438/158438_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove conversion from old style password file

isasl.pw is long gone and we've been using cbsaslpw.json since
the introduction of SCRAM authentication.

Remove the pre-generated password database and generate it in
the environment so that we can add new unit tests cases which
tewaks the password database and calls reload

Change-Id: I5efdf821fe718dbc2580f1fd6b771a23e04a4886

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-30 08:29:33.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-30 08:48:12.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9647/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/cbsasl/password_database.cc b/cbsasl/password_database.cc
index 0af090470..6281ff305 100644
--- a/cbsasl/password_database.cc
+++ b/cbsasl/password_database.cc
@@ -78,7 +78,7 @@ void PasswordDatabase::write_password_file(const std::string&amp; filename,
             std::stringstream ss;
             ss &lt;&lt; &quot;cbsasl_write_password_file: Invalid json specified in &quot;
                   &quot;COUCHBASE_CBSASL_SECRETS. Parse failed with: &#39;&quot;
-                  &lt;&lt; e.what() &lt;&lt; &quot;&#39;&quot;;
+               &lt;&lt; e.what() &lt;&lt; &quot;&#39;&quot;;
             throw std::runtime_error(ss.str());
         }
 

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9647/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10981/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/client_server_test.cc:29:24: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
        nlohmann::json pwdb;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/client_server_test.cc:30:35: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
        pwdb["users"] = nlohmann::json::array();
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10981/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/client_server_test.cc:29:24:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10981/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/604/ : FAILURE

Compile error at [2021-07-30T08:34:07.737Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/cbsasl/client_server_test.cc:29:24:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/604/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38205/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32577/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/588/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13110/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20657/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12574/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11689/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12756/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
